--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -19,7 +19,7 @@ jobs:
       -   name: Fix style
           uses: docker://oskarstark/php-cs-fixer-ga
           with:
-            args: --config=.php_cs --allow-risky=yes
+            args: --config=.php_cs --allow-risky=no
 
       -   name: Commit changes
           uses: stefanzweifel/git-auto-commit-action@v4
