--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "codicastudio/calendarlinks",
-    "description": "A noobs worthless garbage, just learning.",
+    "description": "A random Codica Studio package.",
     "keywords": [
-        "worthless garabage by a noob."
+        ""
     ],
     "homepage": "https://github.com/codicastudio/calendarlinks",
     "license": "MIT",
@@ -33,7 +33,7 @@
         }
     },
     "scripts": {
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=no",
         "test": "vendor/bin/phpunit",
         "test:update-snapshots": "vendor/bin/phpunit -d --update-snapshots"
     },
